# pqc-bridge

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE-APACHE  LICENSE-MIT  MAINTAINERS.md  Makefile  NOTICE  README.md  SECURITY.md  SUPPORT.md  deny.toml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml
.github/ISSUE_TEMPLATE/: backend_integration.yml  bug_report.yml  config.yml  feature_request.yml  security_hardening.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  sbom.yml  scorecard.yml  security.yml  semver.yml
bindings/cpp/: CMakeLists.txt
bindings/cpp/include/: pqcb.h
bindings/go/: README.md  go.mod
bindings/go/examples/primitives/: main.go
bindings/go/pqcb/: pqcb.go  pqcb_test.go
bindings/java/: pom.xml
bindings/java/src/main/java/io/pqcbridge/pqcb/: Pqcb.java
bindings/kotlin/android/: build.gradle.kts
bindings/kotlin/android/src/main/java/io/pqcbridge/pqcb/: Pqcb.kt
bindings/node/: README.md  package-lock.json  package.json  tsconfig.json
bindings/node/examples/: primitives.mjs
bindings/node/src/: index.ts  smoke-abi.ts  smoke-primitives.ts
bindings/python/: README.md  pyproject.toml  smoke_abi.py  smoke_primitives.py
bindings/python/examples/: primitives.py
bindings/python/pqcb/: __init__.py
bindings/swift/: Package.swift
bindings/swift/Sources/PQCB/: PQCB.swift
bindings/wasm/: Cargo.toml  package.json
bindings/wasm/src/: lib.rs
crates/pqcb-backend-rustcrypto/: Cargo.toml
crates/pqcb-backend-rustcrypto/examples/: hybrid_session.rs  sealed_box.rs  signed_message.rs
crates/pqcb-backend-rustcrypto/src/: lib.rs
crates/pqcb-backend-rustcrypto/tests/: hybrid_vectors.rs  ml_dsa_kats.rs  ml_kem_kats.rs
crates/pqcb-cli/: Cargo.toml
crates/pqcb-cli/src/: main.rs
crates/pqcb-core/: Cargo.toml
crates/pqcb-core/examples/: secure_session.rs
crates/pqcb-core/src/: algorithms.rs  envelope.rs  errors.rs  hybrid.rs  kem.rs  keys.rs  lib.rs  prelude.rs  sealed_box.rs  secure_session.rs  signature.rs  signed_message.rs  traits.rs  version.rs
crates/pqcb-core/tests/: envelope_negative.rs  kat_harness.rs
crates/pqcb-ffi/: Cargo.toml
crates/pqcb-ffi/src/: lib.rs
docs/: ABI.md  API_DESIGN.md  ARCHITECTURE.md  BACKENDS.md  BINDINGS.md  COMPLIANCE.md  DECISIONS.md  FAQ.md  GLOSSARY.md  KEY_FORMAT.md  MIGRATION.md  QUALITY.md  RELEASE.md  RELEASE_CHECKLIST.md  REPO_SETTINGS.md  ROADMAP.md  SUPPLY_CHAIN.md  THREAT_MODEL.md
docs/rfcs/: 0001-project-blueprint.md  0002-backend-selection.md  0003-hybrid-composition.md
docs/security/: AUDIT_PLAN.md  FIPS.md
examples/: README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: envelope_decode.rs  ffi_primitives.rs
scripts/: check.sh
tests/kat/: README.md  malformed-manifest.json  manifest-rules.jq  sample-manifest.json
tests/kat/hybrid/: manifest.json
tests/kat/ml-dsa-65/: manifest.json
tests/kat/ml-kem-768/: manifest.json
