[workspace]
members = [
  "bindings/wasm",
  "crates/pqcb-backend-rustcrypto",
  "crates/pqcb-core",
  "crates/pqcb-ffi",
  "crates/pqcb-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/VrianCao/pqc-bridge"
homepage = "https://github.com/VrianCao/pqc-bridge"
documentation = "https://github.com/VrianCao/pqc-bridge/tree/main/docs"
readme = "README.md"
keywords = ["post-quantum", "pqc", "cryptography", "ml-kem", "ml-dsa"]
categories = ["cryptography", "api-bindings", "command-line-utilities"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
pqcb-core = { path = "crates/pqcb-core", version = "0.1.0" }
pqcb-backend-rustcrypto = { path = "crates/pqcb-backend-rustcrypto", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
zeroize = "1"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
alloc_instead_of_core = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
