[workspace]
members = [
  "bindings/wasm",
  "crates/pqcb-backend-rustcrypto",
  "crates/pqcb-core",
  "crates/pqcb-ffi",
  "crates/pqcb-cli",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/VrianCao/pqc-bridge"
homepage = "https://github.com/VrianCao/pqc-bridge"
documentation = "https://github.com/VrianCao/pqc-bridge/tree/main/docs"
readme = "README.md"
keywords = ["post-quantum", "pqc", "cryptography", "ml-kem", "ml-dsa"]
categories = ["cryptography", "api-bindings", "command-line-utilities"]

[workspace.dependencies]
anyhow = "1"
chacha20poly1305 = "0.10.1"
clap = { version = "4", features = ["derive"] }
hkdf = "0.13.0"
pqcb-core = { path = "crates/pqcb-core", version = "0.2.0" }
pqcb-backend-rustcrypto = { path = "crates/pqcb-backend-rustcrypto", version = "0.2.0" }
ml-kem = { version = "=0.3.2", features = ["getrandom", "hazmat", "zeroize"] }
ml-dsa = { version = "=0.1.0", default-features = false, features = ["alloc", "getrandom", "zeroize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
x25519-dalek = { version = "=2.0.1", features = ["getrandom", "static_secrets", "zeroize"] }
zeroize = "1"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
alloc_instead_of_core = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
