[package]
name = "pqcb"
description = "Command-line tools for PQC Bridge."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "pqcb"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
pqcb-core.workspace = true

[lints]
workspace = true
