[package]
name = "pqcb-core"
description = "Core types, traits, and safe API contracts for PQC Bridge."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { workspace = true, optional = true }
thiserror.workspace = true
zeroize.workspace = true

[lints]
workspace = true
