[package]
name = "pqcb-ffi"
description = "C ABI layer for PQC Bridge."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
pqcb-backend-rustcrypto.workspace = true
pqcb-core.workspace = true

[lints]
workspace = true
